# zombiecursor

./: README.md  next.config.ts  package-lock.json  package.json
zombiecursor/: Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  temp_requirements.txt
zombiecursor/agents/coder/: agent.py  main.py  persona.md  prompts.py  tools.py
zombiecursor/agents/coder/tests/: __init__.py
zombiecursor/core/: config.py  context.py  interfaces.py  llm.py  logging_config.py  memory.py  utils.py
zombiecursor/docs/: AGENT_OVERVIEW.html  AGENT_PERSONA_GUIDE.md  ARCHITECTURE.md  EDITOR_INTEGRATION.md  INSTALLATION.md
zombiecursor/scripts/: install-service.sh  setup-dev.sh  start.bat  start.sh
zombiecursor/server/: auth.py  main.py  middleware.py  router.py  routes_agent.py  routes_status.py  ws.py
zombiecursor/tools/: fs_tool.py  git_tool.py  python_tool.py  search_tool.py  system_tool.py
zombiecursor/vectorstores/: faiss_store.py
ওয়ার্কস্টেশন/: all.html  clod.html  combined.html  deepseek.html  grok.html  implementation_plan.md  z.ai.html
ওয়ার্কস্টেশন/docs/: architecture.html  index.html  setup.html  style.css  workflow.html
